# SARosPerceptionKitti

./: .gitignore  CMakeLists.txt  README.md  package.xml  todo.md
benchmark/: CMakeLists.txt  benchmark.sh  package.xml
data/: CMakeLists.txt  package.xml
detection/: CMakeLists.txt  README.md  package.xml
evaluation/: CMakeLists.txt  package.xml
ground_truth/: CMakeLists.txt  README.md  package.xml
helper/: CMakeLists.txt  package.xml
helpers/: tools.cpp  tools.h
include/: rviz_config.rviz
launch/: pre_processing.launch
perception_msgs/: CMakeLists.txt  package.xml
pre_processing/: add_semantic.py  kitti2bag.py  sync_rosbag.py
sensor_processing/: CMakeLists.txt  README.md  package.xml
sensors/: CMakeLists.txt  package.xml
sensors/config/: config_depth_completion.rviz  config_sensor_setup.rviz  config_stereo_vision.rviz  depth_completion_params.cfg  dyn_params_depth_completion.cfg  dyn_params_ground_extraction.cfg  dyn_params_stereo_vision.cfg  parameters.yaml  rviz_config_sensor.rviz
sensors/include/sensors_lib/: depth_completion.h  ground_extraction.h  sensor_fusion.h  sensor_setup.h  stereo_vision.h
sensors/launch/: depth_completion.launch  sensors.launch  sensors_rviz.launch
sensors/scripts/: semantic_segmentation_node.py
sensors/src/: sensor_setup_node.cpp  sensor_setup_nodelet.cpp
sensors/src/sensors_lib/: depth_completion.cpp  ground_extraction.cpp  sensor_fusion.cpp  sensor_setup.cpp  stereo_vision.cpp
src/: dbscan.cpp  detection.cpp  evaluation.cpp  kitti_pcl.cpp  kitti_subscriber.cpp  main.cpp  tracking.cpp
(+82 files in other folders)
